--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     </head>
     <body>
         <div class="wrapper">
-            <div class="header">1</div>
-            <div class="middleBlock">2</div>
-            <div class="footer">3</div>
+            <div class="headerGrid header">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+            </div>
+            <div class="middleBlockGrid middleBlock"></div>
+            <div class="footerGrid footer"></div>
         </div>
     </body>
 </html>
