--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,9 +7,9 @@
     <body>
         <div class="wrapper">
             <div class="headerGrid header">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
+                <div class="logo"><p>EdProg</p></div>
+                <div class="courses"><p>Курсы</p></div>
+                <div class="search"><input value="Поиск"></div>
             </div>
             <div class="middleBlockGrid middleBlock"></div>
             <div class="footerGrid footer"></div>
