--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
                 <div class="courses"><p>Курсы</p></div>
                 <div class="search"><input value="Поиск"></div>
             </div>
-            <div class="middleBlockGrid middleBlock"></div>
+            <div class="middleBlockGrid middleBlock">
+                <div class="centerContent">
+                    <p>Для каждого, кто ищет знания</p>
+                    <p>Наша цель - дать каждому знания высшего уровня</p>
+                </div>
+                <div class="leftContent">
+                    <p>О нас</p>
+                    <p>Данный сайт посвящен различным технологиям программирования, компьютерам, мобильным платформам и ИТ-технологиям. Здесь будут выкладываться различные руководства и учебные материалы, статьи и примеры.</p>
+                </div>
+            </div>
             <div class="footerGrid footer"></div>
         </div>
     </body>
